#10544 폼 리팩토링 - 처리할 문서 - 이력 / 관련 문서 / 댓글 / 태그 기능

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1663,6 +1663,9 @@ input, button, select, optgroup, textarea {
 .z-drawing-board.edit .z-group-label {
   pointer-events: none;
 }
+.z-drawing-board:not([data-display=ready]) .z-component-tooltip {
+  border-color: transparent !important;
+}
 
 .z-save-info {
   min-height: 1.5625rem;
