--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -323,7 +323,7 @@
         <div class="z-document-main-header flex-row justify-content-end align-items-center flex-wrap">
             <div id="defaultButtonArea"></div>
         </div>
-        <div class="z-drawing-board" id="documentDrawingBoard"></div>
+        <div class="z-drawing-board" id="documentDrawingBoard" data-display="ready"></div>
     </div>
 </template>
 </body>
