--- a/src/main/resources/public/template/formDesigner/formEditPreview.html
+++ b/src/main/resources/public/template/formDesigner/formEditPreview.html
@@ -27,7 +27,7 @@
                 <div class="z-document-main-header flex-row justify-content-end align-items-center flex-wrap">
                     <button class="z-button secondary" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
-                <div class="z-drawing-board" id="documentDrawingBoard" data-readonly="true" data-display="preview"></div>
+                <div class="z-drawing-board" id="documentDrawingBoard" data-display="preview"></div>
             </div>
         </div>
     </form>
