--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -21,7 +21,7 @@
                     <div id="defaultButtonArea"></div>
                     <div class="z-action-button-top-area" id="actionButtonTopArea"></div>
                 </div>
-                <div class="z-drawing-board" id="documentDrawingBoard"></div>
+                <div class="z-drawing-board" id="documentDrawingBoard" data-display="running"></div>
                 <div class="z-document-main-footer flex-row justify-content-end align-items-center flex-wrap">
                     <div class="z-action-button-bottom-area" id="actionButtonBottomArea"></div>
                 </div>
