--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -29,10 +29,11 @@
         </form>
         <div class="z-token-properties flex-column" id="documentProperties"></div>
     </div>
-    <!-- 다른이름으로 저장하기 모달-->
+    <!-- 관련 문서 모달-->
     <template id="relatedTokenModalTemplate">
         <div class="related-instance-list">
-            <input class="z-input i-search col-5 mr-2" type="text" name="search" id="search" maxlength="100" th:placeholder="#{token.label.relatedInstancePlaceholder}"/>
+            <input class="z-input i-search col-5 mr-2" type="text" name="search" id="search" maxlength="100"
+                   th:placeholder="#{token.label.relatedInstancePlaceholder}"/>
             <span id="spanTotalCount" class="search-count"></span>
             <div class="table-set" id="instanceList"></div>
         </div>
