--- a/src/main/resources/public/template/layout/navigation.html
+++ b/src/main/resources/public/template/layout/navigation.html
@@ -114,12 +114,12 @@
 				`<label class="top-line">${i18n.msg('product.label.versionSuffix') + data.version}</label>` +
 				`<br><br><br>`+
 				`<label>${i18n.msg('product.label.company')}</label>` +
-				`<a href="${i18n.msg('product.label.url')}">${i18n.msg('product.label.url')}</a>` +
+				`<a href="${i18n.msg('product.label.url')}" class="product-href">${i18n.msg('product.label.url')}</a>` +
 				`<label>${i18n.msg('product.label.email')}</label>` +
 				`<label>${i18n.msg('product.label.mainPhone')}</label>` +
 				`<label>${i18n.msg('product.label.technicalSupport')}</label>` +
 				`<label>${i18n.msg('product.label.productInquiry')}</label>` +
-				`<br><br>`+
+				`<br><br><br>`+
 				`<label>${i18n.msg('product.label.copyright')}</label>` +
 			   `</div>`;
 	}
