--- a/src/main/resources/public/scss/formDesigner/_variables.scss
+++ b/src/main/resources/public/scss/formDesigner/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --data-column: 12;
   --data-row: 2;
+  --data-align: flex-start
 }
 
 //////////////////////////// layout ////////////////////////////
