--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -188,6 +188,7 @@
                 },
                 onCreate: function(modal) {
                     // color picker 초기화
+                    console.log(document.getElementById('documentColor'));
                     new zColorPicker(document.getElementById('documentColor'), { type: 'fill' });
                     // 신청서 상태 초기화
                     const statusElem = document.getElementById('document-status');
