#10546 폼 리팩토링 - 처리할 문서 저장 - 화면

--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -139,6 +139,7 @@
     </div>
     <template id="documentModalTemplate">
         <div class="z-document-main flex-column align-items-center">
+            <input type="hidden" id="instanceId" />
             <div class="z-document-main-header flex-row justify-content-end align-items-center flex-wrap">
                 <div id="defaultButtonArea"></div>
                 <div class="z-action-button-top-area" id="actionButtonTopArea"></div>
