--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -14,6 +14,7 @@
     <div class="z-document-container">
         <form id="frm" name="frm">
             <div class="z-document-main flex-column align-items-center">
+                <input type="hidden" id="instanceId" />
                 <input type="hidden" id="tokenId" th:value="${tokenId}"/>
                 <input type="hidden" id="folderId" th:value="${folderId}"/>
                 <div class="z-document-main-header flex-row justify-content-between align-items-center flex-wrap">
@@ -53,6 +54,7 @@
         aliceJs.fetchJson('/rest/tokens/' + '[[${tokenId}]]' + '/data', {
             method: 'GET'
         }).then((formDataJson) => {
+            document.getElementById('instanceId').value = formDataJson.instanceId;
             formDataJson.tokenId = document.getElementById('tokenId').value;
             formDataJson.folderId = document.getElementById('folderId').value;
 
