#10852 보고서 구현 1. merge 충돌 수정 2. 페이지 적용 3. ERD 스크립트 추가

--- a/src/main/resources/public/scss/report/_preview.scss
+++ b/src/main/resources/public/scss/report/_preview.scss
@@ -44,7 +44,7 @@
             .#{$common-prefix}logo {
                 display: inline-block;
                 background-color: $black;
-                @include maskImage('#{$icon-folder-path}icon_logo.svg', 152px, 26px, no-repeat, center); // 24px 24px
+                @include maskImage('#{$icon-folder-path}logo/icon_logo.svg', 152px, 26px, no-repeat, center); // 24px 24px
             }
         }
     }
