--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -151,7 +151,7 @@
   &cmdb-type-header,
   &cmdb-ci-header,
   &scheduler-header,
-  .report-template-header {
+  &report-template-header {
     padding: 0 3.75rem 0 3.75rem; // 0px 60px 0px 60px
   }
 
