--- a/src/main/resources/public/template/report/reportTemplateSearch.html
+++ b/src/main/resources/public/template/report/reportTemplateSearch.html
@@ -1,135 +1,151 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      layout:decorator="layout/defaultLayout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/itsm/pageType/pagingListLayout}">
 <head>
     <title th:text="#{menu.report.template}"></title>
 </head>
 <body>
-<th:block layout:fragment="content">
-    <div class="board-admin-header">
-        <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{menu.report.template}"></h1>
-            <h6 class="description ml-2" th:text="#{report.msg.configDescription}"></h6>
-        </div>
-        <div class="header-search flex-row">
-            <input type="hidden" sec:authorize="hasAuthority('report.create') || hasAuthority('report.update')"
-                   th:name="isRole" th:value="true"/>
-            <input type="hidden" sec:authorize="!hasAuthority('report.create') && !hasAuthority('report.update')"
-                   th:name="isRole" th:value="false"/>
-            <form id="searchFrm">
-                <input type="text" id="search" name="search" class="z-input i-search col-5 mr-2" maxlength="100"
-                       th:placeholder="#{report.label.searchPlaceholder}"/>
-                <span id="spanTotalCount" class="search-count"></span>
-            </form>
-            <div class="ml-auto">
-                <button type="button" class="z-button secondary" onclick="openTemplateAdd()"
-                        sec:authorize="hasAuthority('scheduler.create')" th:text="#{common.btn.add}"></button>
-            </div>
-        </div>
+<div layout:fragment="pageTitle">
+    <h1 th:text="#{menu.report.template}"></h1>
+    <h6 class="description ml-2" th:text="#{report.msg.configDescription}"></h6>
+</div>
+<div layout:fragment="pageSearching">
+    <input type="hidden" sec:authorize="hasAuthority('report.create') || hasAuthority('report.update')"
+           th:name="isRole" th:value="true"/>
+    <input type="hidden" sec:authorize="!hasAuthority('report.create') && !hasAuthority('report.update')"
+           th:name="isRole" th:value="false"/>
+    <form id="searchFrm">
+        <input type="text" id="searchValue" name="searchValue" class="z-input i-search col-5 mr-2" maxlength="100"
+               th:placeholder="#{report.label.searchPlaceholder}"/>
+        <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
+    </form>
+    <div class="ml-auto">
+        <button type="button" class="z-button secondary" onclick="openTemplateAdd()"
+                sec:authorize="hasAuthority('report.create')" th:text="#{common.btn.add}"></button>
     </div>
-    <div class="board-admin-content flex-fill">
-        <div class="list" id="templateList"></div>
-    </div>
-</th:block>
+</div>
+<div layout:fragment="pageList">
+    <input type="hidden" id="deletable" th:value="${#authorization.expression('hasAuthority(''report.delete'')')}"/>
+    <div class="z-list-content" id="templateList"></div>
+</div>
 </body>
-<th:block layout:fragment="pageScript">
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        let offsetCount = 0;
-        window.onload = function() {
-            document.getElementById('search').focus();
-            document.getElementById('search').addEventListener('keyup', function() { getTemplateList(false); });
-            getTemplateList(false);
-        };
+<script layout:fragment="pageScript" th:inline="javascript">
+    /*<![CDATA[*/
+    let offsetCount = 0;
+    window.onload = function() {
+        document.getElementById('searchValue').focus();
+        document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
+        getList();
+    };
 
-        function getTemplateList(isScroll) {
-            let urlParam = '';
-            if (isScroll) {
-                if (offsetCount === 0) {
-                    offsetCount = aliceJs.searchDataCount;
-                }
-            } else {
-                offsetCount = 0;
+    function getList(pageNum = 1) {
+        restSearchSubmit('get', '/reports/template?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
+    }
+    
+    function restSearchSubmit(method, url) {
+        const opt = {
+            method: method,
+            url: url,
+            async: false,
+            showProgressbar: false,
+            callbackFunc: function (response) {
+                document.getElementById('templateList').innerHTML = response.responseText;
+                setDateTimeFormat(document.getElementById('templateList'));
+                OverlayScrollbars(document.querySelector('.z-list-body'), {
+                    className: 'scrollbar'
+                });
             }
-            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
-            restSubmit('get', '/reports/template?' + urlParam, isScroll);
-        }
+        };
+        aliceJs.sendXhr(opt);
+    }
 
-        // REST API
-        function restSubmit(method, url, isScroll) {
-            const opt = {
-                method: method,
-                url: url,
-                async: false,
-                callbackFunc: function(response) {
-                    if (isScroll) {
-                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                            offsetCount = offsetCount + aliceJs.searchDataCount;
-                        }
-                        const schedulerTbody = document.querySelector('.list-body .os-content');
-                        const tbody = document.createElement('tbody');
-                        tbody.innerHTML = response.responseText;
-                        setDateTimeFormat(tbody);
-                        const container = document.createDocumentFragment();
-                        for (let i = 0; i < tbody.rows.length; i++) {
-                            let node = tbody.rows[i].cloneNode(true);
-                            container.appendChild(node);
-                        }
-                        schedulerTbody.appendChild(container)
-                    } else {
-                        document.getElementById('templateList').innerHTML = response.responseText;
-                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        setDateTimeFormat(document.getElementById('templateList'));
-                        OverlayScrollbars(document.querySelector('.list-body'), {
-                            className: 'scrollbar',
-                            callbacks: {
-                                onScroll: function(e) {
-                                    const scrollHeight = e.target.scrollHeight;
-                                    const scrollTop = e.target.scrollTop;
-                                    const clientHeight = e.target.clientHeight;
-                                    if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
-                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                            getTemplateList(true);
-                                        }
+    /*function getTemplateList(isScroll) {
+        let urlParam = '';
+        if (isScroll) {
+            if (offsetCount === 0) {
+                offsetCount = aliceJs.searchDataCount;
+            }
+        } else {
+            offsetCount = 0;
+        }
+        urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
+        restSubmit('get', '/reports/template?' + urlParam, isScroll);
+    }*/
+
+    // REST API
+    /*function restSubmit(method, url, isScroll) {
+        const opt = {
+            method: method,
+            url: url,
+            async: false,
+            callbackFunc: function(response) {
+                if (isScroll) {
+                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                        offsetCount = offsetCount + aliceJs.searchDataCount;
+                    }
+                    const schedulerTbody = document.querySelector('.list-body .os-content');
+                    const tbody = document.createElement('tbody');
+                    tbody.innerHTML = response.responseText;
+                    setDateTimeFormat(tbody);
+                    const container = document.createDocumentFragment();
+                    for (let i = 0; i < tbody.rows.length; i++) {
+                        let node = tbody.rows[i].cloneNode(true);
+                        container.appendChild(node);
+                    }
+                    schedulerTbody.appendChild(container)
+                } else {
+                    document.getElementById('templateList').innerHTML = response.responseText;
+                    aliceJs.showTotalCount(document.getElementById('totalCount').value);
+                    setDateTimeFormat(document.getElementById('templateList'));
+                    OverlayScrollbars(document.querySelector('.list-body'), {
+                        className: 'scrollbar',
+                        callbacks: {
+                            onScroll: function(e) {
+                                const scrollHeight = e.target.scrollHeight;
+                                const scrollTop = e.target.scrollTop;
+                                const clientHeight = e.target.clientHeight;
+                                if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
+                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                        getTemplateList(true);
                                     }
                                 }
                             }
-                        });
-                    }
-                },
-                showProgressbar: false
-            };
-            aliceJs.sendXhr(opt);
-        }
+                        }
+                    });
+                }
+            },
+            showProgressbar: false
+        };
+        aliceJs.sendXhr(opt);
+    }*/
 
-        /**
-         * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
-         */
-        function setDateTimeFormat(elem) {
-            elem.querySelectorAll('.date-time').forEach(dt => {
-                dt.textContent = i18n.userDateTime(dt.textContent.trim());
-            });
-        }
+    /**
+     * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+     */
+    function setDateTimeFormat(elem) {
+        elem.querySelectorAll('.date-time').forEach(dt => {
+            dt.textContent = i18n.userDateTime(dt.textContent.trim());
+        });
+    }
 
-        function openTemplateAdd() {
-            location.href = '/reports/template/new';
-        }
+    function openTemplateAdd() {
+        location.href = '/reports/template/new';
+    }
 
-        function makeReport(templateId) {
-            const opt = {
-                method: 'post',
-                url: '/rest/reports/template/' + templateId,
-                async: false,
-                callbackFunc: function (response) {
-                    console.log(response.responseText)
-                },
-                showProgressbar: false
-            };
-            aliceJs.sendXhr(opt);
-        }
-        /*]]>*/
-    </script>
-</th:block>
+    function makeReport(templateId) {
+        const opt = {
+            method: 'post',
+            url: '/rest/reports/template/' + templateId,
+            async: false,
+            callbackFunc: function (response) {
+                console.log(response.responseText)
+            },
+            showProgressbar: false
+        };
+        aliceJs.sendXhr(opt);
+    }
+    /*]]>*/
+</script>
 </html>
